k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  labels:
    app: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: core:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
